[package]
name = "babelio-extractor"
version = "0.1.0"
edition = "2024"

[dependencies]

reqwest = { version = "0.12", features = ["json", "multipart", "cookies"] }
tokio = { version = "1", features = ["full"] }
regex = "1.5"
encoding_rs = "0.8"

ratatui = "0.29"
crossterm = "0.29"
color-eyre = "0.6.3"
cli-clipboard = "0.4.0"

